Add buttons and arithmetic functionality

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,13 @@ body {
     background-color: grey;
 }
 
+.container {
+    display: grid; 
+    grid-template-columns: 33% 33% 33%;
+    font-size: 400%;
+    text-align: center;
+}
+
 .number-button {
     display:inline;
     border: 1px red solid; 
