--- a/styles.css
+++ b/styles.css
@@ -2,35 +2,52 @@ body {
     background-color: grey;
 }
 
+.arithmetic-button {
+    border: 5px lightgreen solid; 
+}
+
+.button {
+    background-color: black;
+    border-radius: 40px;
+    cursor: pointer; 
+    color: white;
+    display: inline; 
+}
+
+#clear {
+   border: 5px red solid;  
+   grid-column: span 4; 
+}
+
 .container {
     display: grid; 
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 500%;
     grid-gap: 10px; 
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 175px 175px 175px 175px;
+    /* grid-template-rows: 175px 175px 175px 175px; */
     margin: 20px; 
     text-align: center;
 }
 
-#zero {
-    grid-column: span 3; 
+#equals {
+    border: 5px yellow solid; 
+    grid-column: span 4; 
 }
 
 .number-button {
-    background-color: black;
-    border-radius: 40px;
     border: 5px lightblue solid; 
-    color: white;
-    cursor: pointer; 
-    display:inline;
 }
 
-.arithmetic-button {
+#result {
     background-color: black;
-    border: 5px lightgreen solid; 
-    border-radius: 40px;
-    cursor: pointer; 
-    color: white;
-    display: inline;
+    color: yellowgreen; 
+    height: 100px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 500%;
+    text-align: end; 
+}
+
+#zero {
+    grid-column: span 3; 
 }
